--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       
       table {
         border-collapse: collapse;
-        width: 100%;
+        width: 88%;
+        max-width: 800px;
+        margin: 0 auto;
       }
       
       th, td {
@@ -54,46 +56,46 @@
     </header>
     <table>
       <tr>
-        <th>Encabezado 1</th>
-        <th>Encabezado 2</th>
-        <th>Encabezado 3</th>
-        <th>Encabezado 4</th>
+        <th>Elemento</th>
+        <th>Página web Original</th>
+        <th>Página web Modificada</th>
+        <th>Código HTML Modificado</th>
       </tr>
       <tr>
-        <td>Fila 1, columna 1</td>
-        <td>Fila 1, columna 2</td>
-        <td>Fila 1, columna 3</td>
-        <td>Fila 1, columna 4</td>
+        <td>Tab</td>
+          <td><a href="https://www.udl.cat/ca/udl/xifres/">La UdL en xifres (original)</a></td>
+          <td><a href="https://mariomarti.github.io/Tabs_APG/">La UdL en xifres (modificada)</a></td>
+          <td><a href="https://github.com/MarioMarti/Tabs_APG/blob/main/index.html">HTML modificado</a></td>
       </tr>
       <tr>
-        <td>Fila 2, columna 1</td>
-        <td>Fila 2, columna 2</td>
-        <td>Fila 2, columna 3</td>
-        <td>Fila 2, columna 4</td>
+        <td>Disclosure Menu</td>
+        <td><a href="https://www.udl.cat/ca/serveis/seu/borsa">Orientació i Inserció Laboral (original)</a></td>
+        <td><a href="https://mariomarti.github.io/Disclosure_APG/">Orientació i Inserció Laboral (modificada)</a></td>
+        <td><a href="https://github.com/MarioMarti/Disclosure_APG/blob/main/index.html">HTML modificado</a></td>
       </tr>
       <tr>
-        <td>Fila 3, columna 1</td>
-        <td>Fila 3, columna 2</td>
-        <td>Fila 3, columna 3</td>
-        <td>Fila 3, columna 4</td>
+        <td>Carousel APG</td>
+        <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
+        <td><a href="https://mariomarti.github.io/Carousel_APG/">EPS (modificada)</a></td>
+        <td><a href="https://github.com/MarioMarti/Carousel_APG/blob/main/index.html">HTML modificado</a></td>
       </tr>
       <tr>
-        <td>Fila 4, columna 1</td>
-        <td>Fila 4, columna 2</td>
-        <td>Fila 4, columna 3</td>
-        <td>Fila 4, columna 4</td>
+        <td>Carousel UDL</td>
+        <td><a href="https://www.udl.cat/ca/">UdL (original)</a></td>
+        <td><a href="https://mariomarti.github.io/Carousel_UDL/">UdL (modificada)</a></td>
+        <td><a href="https://github.com/MarioMarti/Carousel_UDL/blob/master/index.html">HTML modificado</a></td>
       </tr>
       <tr>
-        <td>Fila 5, columna 1</td>
-        <td>Fila 5, columna 2</td>
-        <td>Fila 5, columna 3</td>
-        <td>Fila 5, columna 4</td>
+        <td>Landmarks</td>
+        <td><a href="https://www.eps.udl.cat/ca/info_sobre/campus-igualada-udl/">Campus Igualada-UdL (original)</a></td>
+        <td><a href="https://mariomarti.github.io/Landmarks_APG/">Campus Igualada-UdL (modificado)</a></td>
+        <td><a href="https://github.com/MarioMarti/Landmarks_APG/blob/master/index.html">HTML modificado</a></td>
       </tr>
       <tr>
-       <td>Fila 6, columna 1</td>
-        <td>Fila 6, columna 2</td>
-        <td>Fila 6, columna 3</td>
-        <td>Fila 6, columna 4</td>
+        <td>Disclosure Navigation Menu</td>
+        <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
+        <td><a href="https://mariomarti.github.io/DisclosureNavigationMenu_APG/">EPS (modificada)</a></td>
+        <td><a href="https://github.com/MarioMarti/DisclosureNavigationMenu_APG/blob/master/index.html"> HTML modificado</a></td>
       </tr>
     </table>
   </body>
