--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sistemas Web Interactivo accesibles</title>
+    <title>Sistema Web Interactivo accesibles</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
@@ -22,7 +22,15 @@
         text-align: center;
         margin-bottom: 30px;
       }
-      
+
+      p {
+        font-size: 1.2em;
+        margin: 0;
+        padding: 10px;
+        color: #fff;
+        text-align: center;
+      }
+
       h1 {
         font-size: 2.5em;
         margin: 0;
@@ -56,9 +64,22 @@
     </style>
   </head>
   <body>
-    <header>
+    <header aria-label="Cabecera">
       <h1>Sistemas Web Interactivo accesibles</h1>
     </header>
+    <div>
+      <p>
+        Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas. 
+        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, el cual se puede encontrar aquí. 
+      <ul>
+        <li>Introducción a la accesibilidad y la especificación WAI-ARIA</li>
+        <li>Análisis de accesibilidad de las páginas de la UdL y la EPS</li>
+        <li>Implementación de soluciones</li>
+        <li>Publicación y Evaluación de los resultados</li>
+      </ul>
+      </p>
+    </div>
+    <main>
     <table>
       <tr>
         <th>Elemento</th>
@@ -70,38 +91,39 @@
         <td>Tab</td>
           <td><a href="https://www.udl.cat/ca/udl/xifres/">La UdL en xifres (original)</a></td>
           <td><a href="https://mariomarti.github.io/Tabs_APG/">La UdL en xifres (modificada)</a></td>
-          <td><a href="https://github.com/MarioMarti/Tabs_APG/blob/main/index.html">HTML modificado</a></td>
+          <td><a href="https://github.com/MarioMarti/Tabs_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
         <td>Disclosure Menu</td>
         <td><a href="https://www.udl.cat/ca/serveis/seu/borsa">Orientació i Inserció Laboral (original)</a></td>
         <td><a href="https://mariomarti.github.io/Disclosure_APG/">Orientació i Inserció Laboral (modificada)</a></td>
-        <td><a href="https://github.com/MarioMarti/Disclosure_APG/blob/main/index.html">HTML modificado</a></td>
+        <td><a href="https://github.com/MarioMarti/Disclosure_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
         <td>Carousel APG</td>
         <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
         <td><a href="https://mariomarti.github.io/Carousel_APG/">EPS (modificada)</a></td>
-        <td><a href="https://github.com/MarioMarti/Carousel_APG/blob/main/index.html">HTML modificado</a></td>
+        <td><a href="https://github.com/MarioMarti/Carousel_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
         <td>Carousel UDL</td>
         <td><a href="https://www.udl.cat/ca/">UdL (original)</a></td>
         <td><a href="https://mariomarti.github.io/Carousel_UDL/">UdL (modificada)</a></td>
-        <td><a href="https://github.com/MarioMarti/Carousel_UDL/blob/master/index.html">HTML modificado</a></td>
+        <td><a href="https://github.com/MarioMarti/Carousel_UDL/blob/master/index.html">HTML </a></td>
       </tr>
       <tr>
         <td>Landmarks</td>
         <td><a href="https://www.eps.udl.cat/ca/info_sobre/campus-igualada-udl/">Campus Igualada-UdL (original)</a></td>
         <td><a href="https://mariomarti.github.io/Landmarks_APG/">Campus Igualada-UdL (modificado)</a></td>
-        <td><a href="https://github.com/MarioMarti/Landmarks_APG/blob/master/index.html">HTML modificado</a></td>
+        <td><a href="https://github.com/MarioMarti/Landmarks_APG/blob/master/index.html">HTML </a></td>
       </tr>
       <tr>
         <td>Disclosure Navigation Menu</td>
         <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
         <td><a href="https://mariomarti.github.io/DisclosureNavigationMenu_APG/">EPS (modificada)</a></td>
-        <td><a href="https://github.com/MarioMarti/DisclosureNavigationMenu_APG/blob/master/index.html"> HTML modificado</a></td>
+        <td><a href="https://github.com/MarioMarti/DisclosureNavigationMenu_APG/blob/master/index.html"> HTML </a></td>
       </tr>
     </table>
+  </main>
   </body>
 </html>
