--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         font-size: 1.2em;
         margin: 0;
         padding: 10px;
-        color: #fff;
+        color: black;
         text-align: center;
+        margin-bottom: 20px;
       }
 
       h1 {
@@ -54,13 +55,21 @@
       }
       
       th {
-        background-color: #ff9933;
+        background-color: #831453;
         color: #fff;
       }
       
       tr:nth-child(even) {
         background-color: #f2f2f2;
       }
+      ul {
+			padding-left: 0;
+			margin: 0 auto;
+			text-align: center;
+		}
+		li {
+			margin-bottom: 10px;
+		}
     </style>
   </head>
   <body>
@@ -71,12 +80,15 @@
       <p>
         Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas. 
         Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, el cual se puede encontrar aquí. 
+      </p>
       <ul>
         <li>Introducción a la accesibilidad y la especificación WAI-ARIA</li>
         <li>Análisis de accesibilidad de las páginas de la UdL y la EPS</li>
         <li>Implementación de soluciones</li>
         <li>Publicación y Evaluación de los resultados</li>
       </ul>
+      <p>
+        A continuación, una tabla donde se puede encontrar para cada tipo de elemento interactivo referenciado: el ejemplo con problemas en la implementación original, el ejemplo implementado con la solución correspondiente y por último el código HTML de la solución en cuestión.
       </p>
     </div>
     <main>
