--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
       }
 
       p {
-        font-size: 1.2em;
+      
         margin: 0;
         padding: 10px;
-        color: black;
+
         text-align: center;
         margin-bottom: 20px;
+        font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+  margin: 0 auto;
+  max-width: 600px;
+  text-align: justify;
       }
 
       h1 {
@@ -65,7 +71,7 @@
       ul {
 			padding-left: 0;
 			margin: 0 auto;
-			text-align: center;
+			list-style-type: circle;
 		}
 		li {
 			margin-bottom: 10px;
