--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sistema Web Interactivo accesibles</title>
+    <title>Sistema Web Interactivo accesible</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
@@ -34,7 +34,7 @@
   font-size: 16px;
   color: #333;
   margin: 0 auto;
-  max-width: 600px;
+  max-width: 1200px;
   text-align: justify;
       }
 
@@ -69,18 +69,14 @@
         background-color: #f2f2f2;
       }
       ul {
-			padding-left: 0;
-			margin: 0 auto;
 			list-style-type: circle;
 		}
-		li {
-			margin-bottom: 10px;
-		}
+	
     </style>
   </head>
   <body>
     <header aria-label="Cabecera">
-      <h1>Sistemas Web Interactivo accesibles</h1>
+      <h1>Sistema Web Interactivo Accesible</h1>
     </header>
     <div>
       <p>
