--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
   text-align: justify;
       }
 
+      ul {
+  list-style-type: circle;
+  text-align: center;
+}
+li {
+  display: inline-block;
+  text-align: left;
+  margin-left: 10px;
+}
       h1 {
         font-size: 2.5em;
         margin: 0;
@@ -78,7 +87,7 @@
     <header aria-label="Cabecera">
       <h1>Sistema Web Interactivo Accesible</h1>
     </header>
-    <div>
+    <div style="text-align: center;">
       <p>
         Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas. 
         Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, el cual se puede encontrar aquí. 
