--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sistema Web Interactivo accesible</title>
+    <title>Sistema Web Interactivo accesible - Resultados</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
@@ -38,15 +38,7 @@
   text-align: justify;
       }
 
-      ul {
-  list-style-type: circle;
-  text-align: center;
-}
-li {
-  display: inline-block;
-  text-align: left;
-  margin-left: 10px;
-}
+
       h1 {
         font-size: 2.5em;
         margin: 0;
@@ -58,6 +50,7 @@ li {
         width: 80%;
         max-width: 1000px;
         margin: 0 auto;
+        margin-top: 20px;
         background-color: #fff;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -85,24 +78,28 @@ li {
   </head>
   <body>
     <header aria-label="Cabecera">
-      <h1>Sistema Web Interactivo Accesible</h1>
+      <h1>Sistema Web Interactivo Accesible - Resultados</h1>
     </header>
+    <main aria-label="Contenido principal">
     <div style="text-align: center;">
       <p>
         Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas. 
-        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, el cual se puede encontrar aquí. 
+        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, donde se puede encontrar. 
       </p>
+    </div>
+    <div style="width: 70%; margin: 0 auto;">
       <ul>
         <li>Introducción a la accesibilidad y la especificación WAI-ARIA</li>
         <li>Análisis de accesibilidad de las páginas de la UdL y la EPS</li>
         <li>Implementación de soluciones</li>
         <li>Publicación y Evaluación de los resultados</li>
       </ul>
+    </div>
+    <div style="text-align: center;">
       <p>
         A continuación, una tabla donde se puede encontrar para cada tipo de elemento interactivo referenciado: el ejemplo con problemas en la implementación original, el ejemplo implementado con la solución correspondiente y por último el código HTML de la solución en cuestión.
       </p>
     </div>
-    <main>
     <table>
       <tr>
         <th>Elemento</th>
