--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     <div style="text-align: center;">
       <p>
         Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas. 
-        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, donde se puede encontrar. 
+        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el documento final del TFG, donde se puede encontrar en detalle los siguientes aspectos: 
       </p>
     </div>
     <div style="width: 70%; margin: 0 auto;">
       <ul>
-        <li>Introducción a la accesibilidad y la especificación WAI-ARIA</li>
-        <li>Análisis de accesibilidad de las páginas de la UdL y la EPS</li>
-        <li>Implementación de soluciones</li>
-        <li>Publicación y Evaluación de los resultados</li>
+        <li>Introducción a la accesibilidad y la especificación WAI-ARIA.</li>
+        <li>Análisis de accesibilidad de las páginas de la UdL y la EPS.</li>
+        <li>Implementación de soluciones.</li>
+        <li>Publicación y Evaluación de los resultados.</li>
       </ul>
     </div>
     <div style="text-align: center;">
