--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
       ul {
 			list-style-type: circle;
 		}
+    a {
+        text-decoration: none;
+        transition: color 0.3s;
+      }
+      
+      a:hover {
+        font-weight: bold;
+        color: blue;
+      }
 	
     </style>
   </head>
