--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         transition: color 0.3s;
       }
       
-      a:hover {
+      a:hover, a:focus {
         font-weight: bold;
         color: blue;
       }
