--- a/index.html
+++ b/index.html
@@ -75,13 +75,17 @@
 			list-style-type: circle;
 		}
     a {
-        text-decoration: none;
+        text-decoration: underline;
+        color: #036;
         transition: color 0.3s;
+
       }
+      a:visited {
+    color: #606;
+  }
       
       a:hover, a:focus {
         font-weight: bold;
-        color: blue;
       }
 	
     </style>
