--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
     <main aria-label="Contenido principal">
     <div style="text-align: center;">
       <p>
-        Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas. 
+        Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en 
+        solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas.  
+        Para solucionar los diferentes conflictos encontrados, se han implementado soluciones basadas en los <a href="https://www.w3.org/WAI/ARIA/apg/patterns/">patrones proporcionados por el W3C</a>. 
         Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el <a href="https://github.com/MarioMarti/ListaElementosUdL/blob/main/TFG_Sistema_Web_Interactivo_Accesible_Mario_Mart%C3%AD.pdf">documento final del TFG</a>, donde se puede encontrar en detalle los siguientes aspectos: 
       </p>
     </div>
@@ -117,8 +119,8 @@
     <table>
       <tr>
         <th>Elemento</th>
-        <th>Página web Original</th>
-        <th>Página web Modificada</th>
+        <th>Página web Original (no accesible)</th>
+        <th>Página web Modificada (accesible)</th>
         <th>Código HTML Modificado</th>
       </tr>
       <tr>
