--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
       }
       a:visited {
     color: #606;
-  }
+  }     
+      .elemento{
+        font-style: bold;
+      }
       
       a:hover, a:focus {
         font-weight: bold;
@@ -124,37 +127,37 @@
         <th>Código HTML Modificado</th>
       </tr>
       <tr>
-        <td>Tabs</td>
+        <td class="contenedor">Tabs</td>
           <td><a href="https://www.udl.cat/ca/udl/xifres/">La UdL en xifres (original)</a></td>
           <td><a href="https://mariomarti.github.io/Tabs_APG/">La UdL en xifres (modificada)</a></td>
           <td><a href="https://github.com/MarioMarti/Tabs_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td>Disclosure Menu</td>
+        <td class="contenedor">Disclosure Menu</td>
         <td><a href="https://www.udl.cat/ca/serveis/seu/borsa">Orientació i Inserció Laboral (original)</a></td>
         <td><a href="https://mariomarti.github.io/Disclosure_APG/">Orientació i Inserció Laboral (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/Disclosure_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td>Carousel APG</td>
+        <td class="contenedor">Carousel APG</td>
         <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
         <td><a href="https://mariomarti.github.io/Carousel_APG/">EPS (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/Carousel_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td>Carousel UDL</td>
+        <td class="contenedor">Carousel UDL</td>
         <td><a href="https://www.udl.cat/ca/">UdL (original)</a></td>
         <td><a href="https://mariomarti.github.io/Carousel_UDL/">UdL (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/Carousel_UDL/blob/master/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td>Landmarks</td>
+        <td class="contenedor">Landmarks</td>
         <td><a href="https://www.eps.udl.cat/ca/info_sobre/campus-igualada-udl/">Campus Igualada-UdL (original)</a></td>
         <td><a href="https://mariomarti.github.io/Landmarks_APG/">Campus Igualada-UdL (modificado)</a></td>
         <td><a href="https://github.com/MarioMarti/Landmarks_APG/blob/master/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td>Disclosure Navigation Menu</td>
+        <td class="contenedor">Disclosure Navigation Menu</td>
         <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
         <td><a href="https://mariomarti.github.io/DisclosureNavigationMenu_APG/">EPS (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/DisclosureNavigationMenu_APG/blob/master/index.html"> HTML </a></td>
