--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
       a:visited {
     color: #606;
   }     
-      .elemento{
-        font-style: bold;
-      }
+    
       
       a:hover, a:focus {
         font-weight: bold;
@@ -127,37 +125,37 @@
         <th>Código HTML Modificado</th>
       </tr>
       <tr>
-        <td class="elemento">Tabs</td>
+        <td>Tabs</td>
           <td><a href="https://www.udl.cat/ca/udl/xifres/">La UdL en xifres (original)</a></td>
           <td><a href="https://mariomarti.github.io/Tabs_APG/">La UdL en xifres (modificada)</a></td>
           <td><a href="https://github.com/MarioMarti/Tabs_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td class="elemento">Disclosure Menu</td>
+        <td>Disclosure Menu</td>
         <td><a href="https://www.udl.cat/ca/serveis/seu/borsa">Orientació i Inserció Laboral (original)</a></td>
         <td><a href="https://mariomarti.github.io/Disclosure_APG/">Orientació i Inserció Laboral (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/Disclosure_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td class="elemento">Carousel APG</td>
+        <td>Carousel APG</td>
         <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
         <td><a href="https://mariomarti.github.io/Carousel_APG/">EPS (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/Carousel_APG/blob/main/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td class="elemento">Carousel UDL</td>
+        <td>Carousel UDL</td>
         <td><a href="https://www.udl.cat/ca/">UdL (original)</a></td>
         <td><a href="https://mariomarti.github.io/Carousel_UDL/">UdL (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/Carousel_UDL/blob/master/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td class="elemento">Landmarks</td>
+        <td >Landmarks</td>
         <td><a href="https://www.eps.udl.cat/ca/info_sobre/campus-igualada-udl/">Campus Igualada-UdL (original)</a></td>
         <td><a href="https://mariomarti.github.io/Landmarks_APG/">Campus Igualada-UdL (modificado)</a></td>
         <td><a href="https://github.com/MarioMarti/Landmarks_APG/blob/master/index.html">HTML </a></td>
       </tr>
       <tr>
-        <td class="elemento">Disclosure Navigation Menu</td>
+        <td>Disclosure Navigation Menu</td>
         <td><a href="https://www.eps.udl.cat/ca/">EPS (original)</a></td>
         <td><a href="https://mariomarti.github.io/DisclosureNavigationMenu_APG/">EPS (modificada)</a></td>
         <td><a href="https://github.com/MarioMarti/DisclosureNavigationMenu_APG/blob/master/index.html"> HTML </a></td>
