--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         Esta página web ha sido creada para presentar de una manera sencilla los resultados obtenidos en la realización del Trabajo de Fin de Grado "Sistema Web Interactivo Accesible", un proyecto que se centra en 
         solucionar problemas de accesibilidad presentes en los sistemas web de la Universidad de Lleida y de la Escuela Politécnica Superior de la UdL, centrándose únicamente en los elementos interactivos de las mismas.  
         Para solucionar los diferentes conflictos encontrados, se han implementado soluciones basadas en los <a href="https://www.w3.org/WAI/ARIA/apg/patterns/">patrones proporcionados por el W3C</a>. 
-        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el <a href="https://github.com/MarioMarti/ListaElementosUdL/blob/main/TFG_Sistema_Web_Interactivo_Accesible_Mario_Mart%C3%AD.pdf">documento final del TFG</a>, donde se puede encontrar en detalle los siguientes aspectos: 
+        Esta página sirve para encapsular los resultados obtenidos tras la realización del proyecto y permitir una navegación sencilla por los mismos. Sin embargo, se recomienda visitar primero el <a href="https://github.com/MarioMarti/ListaElementosUdL/blob/main/TFG_Sistema_Web_Interactivo_Accesible_Mario_Marti.pdf.pdf">documento final del TFG</a>, donde se puede encontrar en detalle los siguientes aspectos: 
       </p>
     </div>
     <div style="width: 50%; margin: 0 auto;">
